# argument_permutator

./: .gitignore  Makefile  Pipfile  README.md  demo.py  pyproject.toml  setup.py
argument_permutator/: __init__.py  argument_permutator.py
tests/: test_argument_permutator.py
