[tool.poetry]
name = "argument_permutator"
version = "0.1.4"
description = "An argument permutator generator for generating argument permutations for running automated tests and or benchmarks"
authors = ["Michael Andersen <gosuckadeadcow+github@gmail.com>"]
license = "lgpl-3.0"
readme = "README.md"
repository = "https://github.com/blackplague/argument_permutator"
packages = [ { include = "argument_permutator" } ]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/blackplague/argument_permutator/issues"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
